--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -12,6 +12,76 @@
 
     <main>
         <h2>ITIS 3135 Project Overview</h2>  
+        <h3>Portfolio for Anna Speakmon</h3>
+
+        <h4>Project Overview</h4>
+        <p></p>
+
+        <h4>Client Information</h4>
+        <ul>
+            <li><strong>Name: </strong>Anna Speakmon</li>
+            <li><strong>Organization: </strong>A part of the Acting program at ECU, in the Shakespeare Guild</li>
+            <li><strong>Email: </strong>speakmon.anna@gmail.com</li>
+
+        </ul>
+
+        <h4>Site Map</h4>
+        <figure>
+            <img src="images/map.png" width=200px alt="Site Map">
+            <figcaption>Site Map</figcaption>
+        </figure>
+      
+        <h4>Page Design</h4>
+
+        <h5>Home</h5>
+        <ul>
+            <li>The purpose of this page is to be the home page for my client. It'll contain a summary of everything
+                and links to the other aspects of the site.
+            </li>
+            <li>
+                The audience of these sites are recruiters trying to cast my client in a theatrical production.
+            </li>
+            <li>
+                Content of this page will contain simplified information regarding my client. At the bottom will be a form to contact my client.
+            </li>
+        </ul>
+
+        <h5>Portforlio</h5>
+        <ul>
+            <li>This page will contain all the shows my client has performed in, and her role in that stageplay.</li>
+            <li>The audience of this site is someone interested in what my client has been in, alongside to see her roles.</li>
+            <li>Will contain information about the play, the role my client starred in, and an external link to more information about the play.</li>
+        </ul>
+
+        <h5>Media</h5>
+        <ul>
+            <li>This page will contain clips from her performances, alongside pictures in costume and performing.</li>
+            <li>The audience of the site would be those interested in pictures of and clips of her performance.</li>
+            <li>Will contain image files and video files of the plays. There will be an interactable photo gallery.</li>
+        </ul>
+        
+        <h5>About</h5>
+        <ul>
+            <li>This page will contain more information about my client, her story and general information any recruiters would
+                like to know about her.
+            </li>
+            <li>The audience of this site would be those interested in learning more about my client.</li>
+            <li>This will contain paragraphs and pictures talking about my client's life.</li>
+        </ul>
+
+        <h5>Contact</h5>
+        <ul>
+            <li>This page will be a more detailed contact form, alongside will contain information about contacting my client.</li>
+            <li>The audience of this site are those interested in contacting my client to perform in one of their theatrical events.</li>
+            <li>This page will contain a contact us form alongside links to her socials and ways to inquire with her.</li>
+        </ul>
+
+        <h4>Dynamic Functions</h4>
+        <p>I plan on adding forms that are fillable to contact my client, 
+            alongside containing interactable pictures and videos of my client performing
+            on stage. The home page alongside the contact us page will contain the form, and the media
+            page will contain the interactable pictures and videos.
+        </p>
 
     </main>
 
