--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -27,7 +27,7 @@
 
         <h4>Site Map</h4>
         <figure>
-            <img src="images/map.png" width="200px" alt="Site Map">
+            <img src="images/map.png" class="medium" alt="Site Map">
             <figcaption>Site Map</figcaption>
         </figure>
       
