--- a/itis3135/client/media.html
+++ b/itis3135/client/media.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Speakmon's Home Page</title>
+    <title>Anna Speakmon's Media Page</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
@@ -20,8 +20,18 @@
     </header>
 
     <main>
-        <h2>Anna Speakmon's Home</h2>  
-        <p>Hello im anna peak smon and i am gay</p>
+        <h2>Anna Speakmon's Media Page</h2>  
+        <img src="img/DSC_0843.jpg" alt="Anna Speakmon">
+        <img src="img/DSC_4738.jpg" alt="Anna Speakmon">
+        <img src="img/ERH_7971.jpg" alt="Anna Speakmon">
+        <img src="img/ERH_7976.jpg" alt="Anna Speakmon">
+        <img src="img/ERH_8046.jpg" alt="Anna Speakmon">
+        <img src="img/ERH_8081.jpg" alt="Anna Speakmon">
+        <img src="img/ERH_8415.jpg" alt="Anna Speakmon">
+        <img src="img/image.png" alt="Anna Speakmon">
+        <img src="img/image1.png" alt="Anna Speakmon">
+        <img src="img/image2.png" alt="Anna Speakmon">
+        
     </main>
 
     <footer>
