--- a/itis3135/client/portfolio.html
+++ b/itis3135/client/portfolio.html
@@ -20,8 +20,13 @@
     </header>
 
     <main>
-        <h2>Anna Speakmon's Home</h2>  
-        <p>Hello im anna peak smon and i am gay</p>
+        <h1>Portfolio</h2>  
+        <h2>The Plays I have performed in:</h2>
+
+        <h3>She Kills Monsters</h3>
+        <a href="https://en.wikipedia.org/wiki/She_Kills_Monsters">Read More</a>
+        <h3>Anastasia</h3>
+        <a href="https://en.wikipedia.org/wiki/Anastasia_(musical)">Read More</a>
     </main>
 
     <footer>
