--- a/itis3135/client/media.html
+++ b/itis3135/client/media.html
@@ -21,17 +21,17 @@
 
     <main>
         <h2>Anna Speakmon's Media Page</h2>  
-        <img src="img/DSC_0843.jpg" alt="Anna Speakmon">
-        <img src="img/DSC_4738.jpg" alt="Anna Speakmon">
-        <img src="img/ERH_7971.jpg" alt="Anna Speakmon">
-        <img src="img/ERH_7976.jpg" alt="Anna Speakmon">
-        <img src="img/ERH_8046.jpg" alt="Anna Speakmon">
-        <img src="img/ERH_8081.jpg" alt="Anna Speakmon">
-        <img src="img/ERH_8415.jpg" alt="Anna Speakmon">
         <img src="img/image.png" alt="Anna Speakmon">
         <img src="img/image1.png" alt="Anna Speakmon">
         <img src="img/image2.png" alt="Anna Speakmon">
-        
+        <img src="img/A1.png" alt="Anna Speakmon">
+        <img src="img/A2.png" alt="Anna Speakmon">
+        <img src="img/SKM1.png" alt="Anna Speakmon">
+        <img src="img/SKM2.png" alt="Anna Speakmon">
+        <img src="img/SKM3.png" alt="Anna Speakmon">
+        <img src="img/SKM4.png" alt="Anna Speakmon">
+        <img src="img/SKM5.png" alt="Anna Speakmon">
+
     </main>
 
     <footer>
