--- a/itis3135/client/media.html
+++ b/itis3135/client/media.html
@@ -20,18 +20,24 @@
     </header>
 
     <main>
-        <h2>Anna Speakmon's Media Page</h2>  
-        <img src="img/image.png" alt="Anna Speakmon">
-        <img src="img/image1.png" alt="Anna Speakmon">
-        <img src="img/image2.png" alt="Anna Speakmon">
-        <img src="img/A1.png" alt="Anna Speakmon">
-        <img src="img/A2.png" alt="Anna Speakmon">
+        <h2>Anna Speakmon's Media Page</h2> 
+        <h3>Images</h3> 
+        <h4>She Kills Monsters</h4>
         <img src="img/SKM1.png" alt="Anna Speakmon">
         <img src="img/SKM2.png" alt="Anna Speakmon">
         <img src="img/SKM3.png" alt="Anna Speakmon">
         <img src="img/SKM4.png" alt="Anna Speakmon">
         <img src="img/SKM5.png" alt="Anna Speakmon">
+        <img src="img/image.png" alt="Anna Speakmon">
+        <h4>Anastasia</h4>
+       
+        <img src="img/image1.png" alt="Anna Speakmon">
+        <img src="img/image2.png" alt="Anna Speakmon">
+        <img src="img/A1.png" alt="Anna Speakmon">
+        <img src="img/A2.png" alt="Anna Speakmon">
+       
 
+        <h2>Clips</h2>
     </main>
 
     <footer>
