--- a/itis3135/client/about.html
+++ b/itis3135/client/about.html
@@ -21,7 +21,7 @@
 
     <main>
         <h2>Anna Speakmon's Home</h2>  
-        <p>Hello im anna peak smon and i am gay</p>
+        <p>Hello im anna speakmon, im jamican</p>
     </main>
 
     <footer>
