--- a/itis3135/client/about.html
+++ b/itis3135/client/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Speakmon's Home Page</title>
+    <title>About Anna</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
@@ -20,8 +20,14 @@
     </header>
 
     <main>
-        <h2>Anna Speakmon's Home</h2>  
-        <p>Hello im anna speakmon, im jamican</p>
+        <h2>About Me</h2>  
+        <p>I am a student at East Carolina University and am currently in my second year, 
+            working towards a Bachelor of Fine Arts with a concentration in Acting and a 
+            minor in Creative Writing. I have been passionate about theater since middle school, 
+            and it has been my world ever since. Recently, I have discovered my love for Shakespeare 
+            (especially Macbeth) and have joined the club “The Shakespeare Guild” to participate in their 
+            productions.</p>
+            <img src="img/profImg.png" alt="Anna Speakmon">
     </main>
 
     <footer>
