--- a/itis3135/client/contact.html
+++ b/itis3135/client/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Speakmon's Home Page</title>
+    <title>Anna Speakmon's Contact Details</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
@@ -20,8 +20,12 @@
     </header>
 
     <main>
-        <h2>Anna Speakmon's Home</h2>  
-        <p>Hello im anna peak smon and i am gay</p>
+        <h2>Contact Details</h2>  
+        <p>Contact me here:</p>
+        <p><em>Email:</em> speakmon.anna@gmail.com</p>
+        <p><em>Instagram:</em> @writer.trying.their.best</p>
+        <img src="img/image1.png" alt="Anna Speakmon">
+        <img src="img/posing.png" alt="Anna Speakmon">
     </main>
 
     <footer>
