--- a/itis3135/client/portfolio.html
+++ b/itis3135/client/portfolio.html
@@ -24,8 +24,10 @@
         <h2>The Plays I have performed in:</h2>
 
         <h3>She Kills Monsters</h3>
+        <img src="img/shekillsmonsters_orig.jpg" alt="Poster for She Kills Monsters">
         <a href="https://en.wikipedia.org/wiki/She_Kills_Monsters">Read More</a>
         <h3>Anastasia</h3>
+        <img src="img/anastasia_musical_poster.jpg" alt="Poster for Anastasia">
         <a href="https://en.wikipedia.org/wiki/Anastasia_(musical)">Read More</a>
     </main>
 
