--- a/itis3135/client/about.html
+++ b/itis3135/client/about.html
@@ -8,7 +8,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div data-include="components/header.html"></div>
+   
     <header>
         <nav>
                 <a href="index.html">Home</a>
@@ -31,7 +31,8 @@
     </main>
 
     <footer>
-
+        <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Certified in <a href="https://www.freecodecamp.org/certification/asantana/responsive-web-design">Responsive Web Design</a></p>
+   
     </footer>
     <!--script src="scripts/htmlinclude.js"></script-->
 </body>
