--- a/itis3135/client/index.html
+++ b/itis3135/client/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <h2>Anna Speakmon's Home</h2>  
-        <p>Hello im anna peak welcome to home</p>
+        <p>Hello! I am Anna Speakmon, and this is my home page.</p>
         <img src="img/image.png" alt="Anna Speakmon">
         <img src="img/ddr.png" alt="Anna Speakmon">
         <img src="img/laiosCos.png" alt="Anna Speakmon">
