--- a/itis3135/client/contact.html
+++ b/itis3135/client/contact.html
@@ -24,8 +24,8 @@
         <p>Contact me here:</p>
         <p><em>Email:</em> speakmon.anna@gmail.com</p>
         <p><em>Instagram:</em> @writer.trying.their.best</p>
-        <img src="img/image1.png" alt="Anna Speakmon">
-        <img src="img/posing.png" alt="Anna Speakmon">
+        <img src="img/image1.png" alt="Me performing in Anastasia"> <br>
+        <img src="img/posing.png" alt="A picture I took with a Neuvillette cosplayer"><br>
     </main>
 
     <footer>
