--- a/itis3135/client/portfolio.html
+++ b/itis3135/client/portfolio.html
@@ -20,15 +20,23 @@
     </header>
 
     <main>
-        <h1>Portfolio</h2>  
-        <h2>The Plays I have performed in:</h2>
+        <h1>Portfolio</h1>  
+        
+        <h2>Plays I have performed in:</h2>
 
         <h3>She Kills Monsters</h3>
-        <img src="img/shekillsmonsters_orig.jpg" alt="Poster for She Kills Monsters">
-        <a href="https://en.wikipedia.org/wiki/She_Kills_Monsters">Read More</a>
+        <img src="img/shekillsmonsters_orig.jpg" alt="Poster for She Kills Monsters"> <br>
+        <a href="https://en.wikipedia.org/wiki/She_Kills_Monsters">Read More</a><br>
         <h3>Anastasia</h3>
-        <img src="img/anastasia_musical_poster.jpg" alt="Poster for Anastasia">
-        <a href="https://en.wikipedia.org/wiki/Anastasia_(musical)">Read More</a>
+        <img src="img/anastasia_musical_poster.jpg" alt="Poster for Anastasia"><br>
+        <a href="https://en.wikipedia.org/wiki/Anastasia_(musical)">Read More</a><br>
+        <h3>A Midsummer Night's Dream</h3>
+        <a href="https://en.wikipedia.org/wiki/A_Midsummer_Night%27s_Dream">Read More</a><br>
+        <h3>The Addams Family</h3>
+        <a href="https://en.wikipedia.org/wiki/The_Addams_Family_(musical)">Read More</a><br>
+        <h3>Medea</h3>
+        <a href="https://en.wikipedia.org/wiki/Medea_(play)">Read More</a><br>
+        <br>
     </main>
 
     <footer>
