--- a/itis3135/client/index.html
+++ b/itis3135/client/index.html
@@ -22,9 +22,9 @@
     <main>
         <h2>Anna Speakmon's Home</h2>  
         <p>Hello! I am Anna Speakmon, and this is my home page.</p>
-        <img src="img/image.png" alt="Anna Speakmon">
-        <img src="img/ddr.png" alt="Anna Speakmon">
-        <img src="img/laiosCos.png" alt="Anna Speakmon">
+        <img src="img/image.png" alt="Me in She kills monsters pointing a sword at the camera"><br>
+        <img src="img/ddr.png" alt="At a convention"><br>
+        <img src="img/laiosCos.png" alt="Me dressed up with Laios from Dungeon Meshi"><br>
     </main>
 
     <footer>
