--- a/itis3135/client/about.html
+++ b/itis3135/client/about.html
@@ -8,16 +8,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-   
-    <header>
-        <nav>
-                <a href="index.html">Home</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="media.html">Media</a>
-                <a href="about.html">About Me</a>
-                <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+    <div data-include="components/header.html"></div>
 
     <main>
         <h2>About Me</h2>  
@@ -30,10 +21,7 @@
             <img src="img/profImg.png" alt="A headshot of me">
     </main>
 
-    <footer>
-        <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Certified in <a href="https://www.freecodecamp.org/certification/asantana/responsive-web-design">Responsive Web Design</a></p>
-   
-    </footer>
-    <!--script src="scripts/htmlinclude.js"></script-->
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/htmlinclude.js"></script>
 </body>
 </html>
