--- a/itis3135/client/contact.html
+++ b/itis3135/client/contact.html
@@ -8,17 +8,8 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div data-include="components/header.html"></div>
    
-    <header>
-        <nav>
-                <a href="index.html">Home</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="media.html">Media</a>
-                <a href="about.html">About Me</a>
-                <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-
     <main>
         <h2>Contact Details</h2>  
         <p>Contact me here:</p>
@@ -28,10 +19,8 @@
         <img src="img/posing.png" alt="A picture I took with a Neuvillette cosplayer"><br>
     </main>
 
-    <footer>
-        <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Certified in <a href="https://www.freecodecamp.org/certification/asantana/responsive-web-design">Responsive Web Design</a></p>
-   
-    </footer>
-    <!--script src="scripts/htmlinclude.js"></script-->
+    <div data-include="components/footer.html"></div>
+  
+    <script src="scripts/htmlinclude.js"></script>
 </body>
 </html>
