--- a/itis3135/client/portfolio.html
+++ b/itis3135/client/portfolio.html
@@ -9,15 +9,7 @@
 </head>
 <body>
    
-    <header>
-        <nav>
-                <a href="index.html">Home</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="media.html">Media</a>
-                <a href="about.html">About Me</a>
-                <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+    <div data-include="components/header.html"></div>
 
     <main>
         <h1>Portfolio</h1>  
@@ -39,10 +31,7 @@
         <br>
     </main>
 
-    <footer>
-        <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Certified in <a href="https://www.freecodecamp.org/certification/asantana/responsive-web-design">Responsive Web Design</a></p>
-   
-    </footer>
-    <!--script src="scripts/htmlinclude.js"></script-->
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/htmlinclude.js"></script>
 </body>
 </html>
