--- a/itis3135/drawing.html
+++ b/itis3135/drawing.html
@@ -1,2 +1,26 @@
-<script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Drawing</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+</head>
+<body class="school">
+    <div data-include="components/header.html"></div>
+
+    <main>
+        <h2>ITIS 3135 Drawing</h2>  
+       
+    </main>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
 <script src="scripts/sketch.js"></script>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/htmlinclude.js"></script>
+</body>
+</html>
