--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -12,12 +12,25 @@
 
     <main>
         <h2>ITIS 3135 Review 1 - Lee, Austin</h2>  
-
-        <img src="" alt=""><br>
+<figure>
+    <img src="images/austinLeeSite.png" alt="Backpacking Buddies Charlotte Site">
+    <figcaption><a href="https://alee182.github.io/itis3135/backpackingbuddiescharlotte/" target="_blank">Backpacking Buddies Charlotte Site</a></figcaption>
+</figure>
+      
         <h3>Checklist for Austin Lee</h3>
-        <ul>    
-            <li>There is currently no site to review.</li>
-        </ul>
+        <ol>    
+            <li>✔ Submission leads to right page.</li>
+            <li>✔ No spaces/uppercase in file/folder names.</li>
+            <li>✔ Easy to read and has good contrast.</li>
+            <li>✔ Pages have header, footer, and main. Alongside that there is a working navbar.</li>
+            <li>No branding on the site, other than the home page. I recommend adding a logo or image related to the organization in the nav bar.</li>
+            <li>Photo gallery is missing content.</li>
+            <li>About us page has no padding or space at the bottom.</li>
+            <li>Footer is larger than it should be. Alongside there is extra space to the right of the page that causes the
+                user to be able to scroll to the side.
+            </li>
+        </ol>
+        <p>Overall, the site is well designed and easy to read. There are a lot of missing information I would like, but its on the right track.</p>
     </main>
 
     <div data-include="components/footer.html"></div>
