--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -13,10 +13,17 @@
     <main>
         <h2>ITIS 3135 Review 2 - Jagdon, Jonathan</h2>  
 
-        <img src="" alt=""><br>
+        <img src="review2.png" alt="Raymundo's Site"><br>
         <h3>Checklist for Jonathan Jagdon</h3>
         <ul>    
-            <li>There is currently no site to review.</li>
+            <li>✔ Submission leads to right page.</li>
+            <li>✔ No spaces/uppercase in file/folder names.</li>
+            <li>✔ Easy to read and has good contrast.</li>
+            <li>✔ Pages have header, footer, and main. Alongside that there is a working navbar.</li>
+            <li>Site is incomplete, and has images that are missing.</li>
+        <li>Contains information that does not pertain to the site.</li>
+        <li>Not sure what the site's purpose is. It's about skating but 
+            there isnt much of a purpose to it. Is the site a perfonal blog? If so you might want to say that.</li>
         </ul>
     </main>
 
