--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -20,10 +20,9 @@
             <li>✔ No spaces/uppercase in file/folder names.</li>
             <li>✔ Easy to read and has good contrast.</li>
             <li>✔ Pages have header, footer, and main. Alongside that there is a working navbar.</li>
-            <li>Site is incomplete, and has images that are missing.</li>
-        <li>Contains information that does not pertain to the site.</li>
+            <li>Videos have a strange border around them that does not fit the aspect ratio of the video.</li>
         <li>Not sure what the site's purpose is. It's about skating but 
-            there isnt much of a purpose to it. Is the site a perfonal blog? If so you might want to say that.</li>
+            there isnt much of a purpose specified to it. Is the site a perfonal blog? A site to showcase skate tricks? If so you might want to say that.</li>
         </ul>
     </main>
 
