--- a/itis3135/client/portfolio.html
+++ b/itis3135/client/portfolio.html
@@ -17,10 +17,10 @@
         <h2>Plays I have performed in:</h2>
 
         <h3>She Kills Monsters</h3>
-        <img src="img/shekillsmonsters_orig.jpg" alt="Poster for She Kills Monsters"> <br>
+        <img src="img/skm.png" alt="Poster for She Kills Monsters"> <br>
         <a href="https://en.wikipedia.org/wiki/She_Kills_Monsters">Read More</a><br>
         <h3>Anastasia</h3>
-        <img src="img/anastasia_musical_poster.jpg" alt="Poster for Anastasia"><br>
+        <img src="img/anas.png" alt="Poster for Anastasia"><br>
         <a href="https://en.wikipedia.org/wiki/Anastasia_(musical)">Read More</a><br>
         <h3>A Midsummer Night's Dream</h3>
         <a href="https://en.wikipedia.org/wiki/A_Midsummer_Night%27s_Dream">Read More</a><br>
