--- a/itis3135/client/about.html
+++ b/itis3135/client/about.html
@@ -18,7 +18,7 @@
             and it has been my world ever since. Recently, I have discovered my love for Shakespeare 
             (especially Macbeth) and have joined the club “The Shakespeare Guild” to participate in their 
             productions.</p>
-            <img class="center" src="img/profImg.png" alt="A headshot of me"> <br>
+            <img src="img/profImg.png" alt="A headshot of me"> <br>
     </main>
 
     <div data-include="components/footer.html"></div>
